# gibber

./: .gitignore  GIBBER-CLAUDE.md  GIBBER-DICTIONARY.md  GIBBER-HANDSHAKE.md  GIBBER-RULES.md  GIBBER-SPEC.md  GIBBER-VERSION  LICENSE  LICENSE.md  README.md  case-studies.html  dictionary.html  entities.json  getting-started.html  gibber-install.sh  index.html  index.txt  mempalace.yaml  spec.html  tools.html  white-paper.html  white-paper.md
404/: index.html
_next/static/-OUSuZWpC70rLxztqtpbD/: _buildManifest.js
_next/static/G8BgWGST6NKFnnZgNXwPE/: _buildManifest.js
_next/static/chunks/: 111-3437d82c68e3422e.js  172.6fb44ac9e0cc9431.js  255-984cd432c1a30517.js  416-417b997492fece71.js  420-78450aa1cf84dda3.js  816-a5749df0276a1fd1.js  816-be2e1d42c90f030b.js  adda3502.ba9664ec3bf814ee.js  main-app-d0e335ac60f356c8.js  main-d5dbb34bf2ed872e.js  webpack-1cae8acdc4b75a7b.js  webpack-5c6996d48672e21b.js  (+1 more)
crates/gibber-parse/: Cargo.toml
crates/gibber-parse/src/: ast.rs  emitter.rs  indexer.rs  lib.rs  parser.rs  validate.rs
dictionaries/: meta-v1.dict.gibber
docs/: org-dictionaries-rules.md  org-dictionaries.md
playground/: index.html  index.txt
playground/playground/: index.html  index.txt
templates/: completed.gibber  index.gibber  learning.gibber  memory.gibber  session.gibber  task.gibber
tests/: bad-duplicate.dict.gibber  bad-kind.dict.gibber  example-org.dict.gibber  test_dict_validate.py
tools/: GIBBER-TOOLS.md  dict_validate.py  gibber-run  gibber-verify  tools-dictionary.md  verifier-prompt.gibber
tools/rules/: cargo.rules  git.rules
(+32 files in other folders)
