[package]
name = "gibber-parse"
description = "S-expression parser for the Gibber protocol — read, write, and round-trip .gibber files"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Frank Decker <frank@dzineer.com>"]

[[bin]]
name = "gibber"
path = "src/bin/gibber.rs"

[dependencies]
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
